fixed some spacing issues

--- a/styles/styles_tableOfContentsTopic.css
+++ b/styles/styles_tableOfContentsTopic.css
@@ -40,8 +40,10 @@ a{
 
 main{
 	display:flex;
+	flex-wrap:wrap;
 	flex-direction: row;
-	justify-content: top;
+	justify-content:left;
+	align-items:top;
 	height:80%;
 }
 
@@ -49,14 +51,15 @@ section{
     display:flex;
     flex-direction:column;
     justify-content:flex-start;
-    align-items: center;
+    align-items:center;
     border: 6px solid black;
     border-radius: 30px;
-    margin:10px;
+    margin:1.20%;
 	padding-bottom:20px;
 	height:fit-content;
 	overflow: hidden;
 	background-color: white;
+	width:30%;
 }
 
 section h2{
@@ -77,8 +80,4 @@ section a{
     width:100%;
     padding:0px 5px 5px 5px;
 	text-decoration: underline;
-}
-
-.width-100{
-	width:100%;
 }
